--- a/Home Page.html
+++ b/Home Page.html
@@ -181,7 +181,7 @@ body {
   </div>
 
   <div class="info2">
-    <p><font size="12"><b>Countinuation of Ayurveda</b></font></p>
+    <p><font size="12"><b>Continuation of Ayurveda</b></font></p>
     <br>
     <p>
       <font size="5">
